--- a/index.html
+++ b/index.html
@@ -168,13 +168,23 @@
             </div>
             <div class="tabCon">
                 <div class="layout">
-                    <div class="title"><span>告警</span><p>更多 >></p></div>
+                    <div class="title"><span>告警</span></div>
                     <div class="table">
                         <div class="tabTit"><span>序号</span><span>时间</span><span>标题</span></div>
                         <ul id="alarms"></ul>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<!--弹窗-->
+<div class="tcHide">
+    <div class="masking" onclick="$('.tcHide').hide()"></div>
+    <div class="tcCon">
+        <div class="tcTit"><span>告警信息</span></div>
+        <div class="ul_list">
+            <ul></ul>
         </div>
     </div>
 </div>
