--- a/homepage.html
+++ b/homepage.html
@@ -24,16 +24,16 @@
     </div>
     <div class="homeCon">
         <div class="leftItem">
-            <a class="item">
-                <span><img src="images/homepage/icon1.png"/>考评管理子系统</span>
-                <p>点击进入>></p>
-            </a>
-            <a class="item">
-                <span><img src="images/homepage/icon2.png"/>考评监测子系统</span>
-                <p>点击进入>></p>
-            </a>
             <a class="item" href="index.html">
-                <span><img src="images/homepage/icon3.png"/>考评</span>
+                <span><img src="images/homepage/icon1.png"/>管理子系统</span>
+                <p>点击进入>></p>
+            </a>
+            <a class="item">
+                <span><img src="images/homepage/icon2.png"/>监测子系统</span>
+                <p>点击进入>></p>
+            </a>
+            <a class="item">
+                <span><img src="images/homepage/icon3.png"/>处置子考评</span>
                 <p>点击进入>></p>
             </a>
         </div>
