--- a/index.html
+++ b/index.html
@@ -182,8 +182,9 @@
 <div class="tcHide">
     <div class="masking" onclick="$('.tcHide').hide()"></div>
     <div class="tcCon">
-        <div class="tcTit"><span>告警信息</span></div>
+        <div class="tcTit"><span></span></div>
         <div class="ul_list">
+            <div class="ul_title"><span>名称</span><span>类型</span><span>状态</span></div>
             <ul></ul>
         </div>
     </div>
