--- a/evaluationObject.html
+++ b/evaluationObject.html
@@ -61,7 +61,7 @@
                                     <ul class="navThree" v-if="activeThreeIndex===indexSub" :class="activeThreeIndex===indexSub?'display':''">
                                         <li v-for="(itemThree,indexThree) in itemSub.information" v-if="itemSub.information.length>0">
                                             <i></i>
-                                            <p>{{itemThree.name}}</p>
+                                            <p>{{itemThree.displayName}}</p>
                                             <img v-on:click="delThreeList(indexThree,indexSub,index)" src="images/template/icon-del.png"/>
                                         </li>
                                     </ul>
