--- a/management.html
+++ b/management.html
@@ -76,6 +76,7 @@
         $("#userList").css("max-height", docHeight - 300);
         if (docWidth <= 1366) {
             $(".management .manageCon .manageItem .item ul").css("min-height", docHeight - 500);
+            $(".management .manageCon .manageItem .itemCon .itemList .item ul").css("min-height", (docHeight - 540)/2);
         }
     });
 </script>
