--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
 <body>
 <div id="main" class="home">
     <div class="logo">
-        <span><img src="images/template/icon-logo.png"/>深圳市城市管理和综合执法局</span>
+        <span><img src="images/template/icon-logo.png"/><img src="images/template/logo.png"/></span>
         <p onclick="quit()"><img src="images/template/icon-quit.png"/>退出</p>
     </div>
     <div class="homeCon">
